Fix Spacing on Journal Page

--- a/src/components/BreadCrumbs/BreadCrumbs.scss
+++ b/src/components/BreadCrumbs/BreadCrumbs.scss
@@ -1,6 +1,7 @@
-ul {
+ul.bread-crumb-list {
   list-style: none;
-  padding: 0;
+  margin: 30px 0px 5px;
+  padding: 0px;
 
   div {
     display: inline-block;
